视频完成与微信服务器的交互

--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,3 +1,4 @@
+# home
 #jdbc.driver=com.mysql.jdbc.Driver
 #jdbc.url=jdbc:mysql://127.0.0.1:3306/test?useUnicode=true&characterEncoding=utf8&autoReconnect=true&allowMultiQueries=true
 #jdbc.username=root
@@ -8,3 +9,9 @@ jdbc.driver=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost:3306/weixin?useUnicode=true&characterEncoding=utf8&autoReconnect=true&allowMultiQueries=true
 jdbc.username=weixinUser
 jdbc.password=WeixinLinuxSoDev
+
+# company
+#jdbc.driver=com.mysql.jdbc.Driver
+#jdbc.url=jdbc:mysql://127.0.0.1:3306/test?useUnicode=true&characterEncoding=utf8&autoReconnect=true&allowMultiQueries=true
+#jdbc.username=root
+#jdbc.password=root
