实现了根据类型文本消息的自动回复,添加了天气预报和讲笑话的功能.另外添加了号码被关注的时候弹出一个功能菜单

--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -5,13 +5,13 @@
 #jdbc.password=root
 
 # productEnv
-jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/weixin?useUnicode=true&characterEncoding=utf8&autoReconnect=true&allowMultiQueries=true
-jdbc.username=weixinUser
-jdbc.password=WeixinLinuxSoDev
+#jdbc.driver=com.mysql.jdbc.Driver
+#jdbc.url=jdbc:mysql://localhost:3306/weixin?useUnicode=true&characterEncoding=utf8&autoReconnect=true&allowMultiQueries=true
+#jdbc.username=weixinUser
+#jdbc.password=WeixinLinuxSoDev
 
 # company
-#jdbc.driver=com.mysql.jdbc.Driver
-#jdbc.url=jdbc:mysql://127.0.0.1:3306/test?useUnicode=true&characterEncoding=utf8&autoReconnect=true&allowMultiQueries=true
-#jdbc.username=root
-#jdbc.password=root
+jdbc.driver=com.mysql.jdbc.Driver
+jdbc.url=jdbc:mysql://127.0.0.1:3306/test?useUnicode=true&characterEncoding=utf8&autoReconnect=true&allowMultiQueries=true
+jdbc.username=root
+jdbc.password=root
