--- a/pom.xml
+++ b/pom.xml
@@ -157,6 +157,32 @@
           <version>1.3.1</version>
       </dependency>
 
+	  <dependency>
+		  <groupId>org.apache.shiro</groupId>
+		  <artifactId>shiro-core</artifactId>
+		  <version>1.2.3</version>
+	  </dependency>
+	  <dependency>
+		  <groupId>org.apache.shiro</groupId>
+		  <artifactId>shiro-web</artifactId>
+		  <version>1.2.3</version>
+	  </dependency>
+	  <dependency>
+		  <groupId>org.apache.shiro</groupId>
+		  <artifactId>shiro-spring</artifactId>
+		  <version>1.2.3</version>
+	  </dependency>
+	  <dependency>
+		  <groupId>org.apache.shiro</groupId>
+		  <artifactId>shiro-ehcache</artifactId>
+		  <version>1.2.3</version>
+	  </dependency>
+      <!-- https://mvnrepository.com/artifact/net.sf.ehcache/ehcache -->
+      <dependency>
+          <groupId>net.sf.ehcache</groupId>
+          <artifactId>ehcache</artifactId>
+          <version>2.8.1</version>
+      </dependency>
   </dependencies>
 	<build>
 		<plugins>
